# Brigadier

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
brigadier/: __init__.py  __main__.py  cli.py  http.py
