[build-system]
requires = [ "setuptools >= 61.2" ]
build-backend = "setuptools.build_meta"

[project]
name = "Brigadier"

requires-python = ">=3.6"
dependencies = [
    'importlib_metadata; python_version<"3.8"',
    "packaging",
]
dynamic = ["version"]

[project.scripts]
brigadier = "brigadier.module:function"
